--- a/css/responsive.css
+++ b/css/responsive.css
@@ -138,15 +138,15 @@
         color: var(--color-prim-txt);
     }
     .ep-navbar .menu>ul>li.order-1:nth-child(4) {
-        border-bottom: var(--border-thin);
+        border-bottom: var(--border-extralight);
+        padding-bottom: 3.25rem;
     }
     .ep-navbar .menu>ul>li.order-2 {
         display: block;
         margin-bottom: 2px;
     }
     .ep-navbar .menu>ul>li.order-2.start {
-        margin-top: 1rem;
-        /* background-color: aqua; */
+        margin-top: 1.5rem;
     }
     .ep-navbar .menu>ul>li.order-2 a span {
         margin-left: 8px;
@@ -193,8 +193,9 @@
         border: 2px solid var(--color-green-200);
         border-radius: 2rem;
         color: var(--color-green-200);
-        padding: 4px 40%;
+        padding: 8px 56%;
         font-weight: 600;
+        font-size: 1.15rem;
     }
     .ep-navbar .menu .menu-mobile-nav .menu-mobile-close {
         font-size: 2.25rem;
