--- a/css/responsive.css
+++ b/css/responsive.css
@@ -70,6 +70,9 @@
         -ms-flex-align: center;
         align-items: center;
     }
+    .nav-item-right .menu-icon {
+        display: none;
+    }
     .ep-navbar .menu {
         position: fixed;
         top: 0;
@@ -107,7 +110,7 @@
     }
     .ep-navbar .menu>ul>li .indicator {
         background-color: var(--color-green-200);
-        height: 3px;
+        height: 2px;
         margin-top: 8px;
         -webkit-transition: all 0.5s ease-in-out;
         transition: all 0.5s ease-in-out;
