--- a/css/style.css
+++ b/css/style.css
@@ -163,19 +163,19 @@ img {
     display: block;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: auto;
     margin: 0 auto;
     padding: 0.75rem 0;
     z-index: 100;
     background: var(--color-white);
-    -webkit-box-shadow: var(--shadow-medium);
+    backdrop-filter: blur(5px);
     box-shadow: var(--shadow-medium);
 }
 
 .nav-at-header {
     background: linear-gradient(#0000005d, #00000000);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(0px);
     box-shadow: none;
 }
 
@@ -297,4 +297,28 @@ img {
 .ep-navbar .menu-mobile-nav,
 .ep-navbar .menu-mobile-toggle {
     display: none;
+}
+
+
+/* main content */
+
+.ep-main-content {
+    position: relative;
+    overflow-x: hidden;
+}
+
+.ep-main-content .section h1 {
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 4%;
+}
+
+.ep-main-content #ep-landing {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    overflow-x: hidden;
+    /* background-color: var(--dark); */
+    background-color: var(--color-green-400);
 }
