--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,19 @@
     --shadow-large: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--color-ter-bg);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--color-purple-200);
+    border-radius: 4rem;
+}
+
 body {
     --color-prim-bg: #ffffff;
     --color-sec-bg: #f5f5f6;
@@ -32,6 +45,7 @@ body {
     --border-thin: 1px solid #e2e1e5;
     --border-extralight: 1px solid #a7a6b0;
     --color-overlay-bg: #14132c80;
+    --color-popup-bg: #ffffff;
 }
 
 *,
@@ -68,7 +82,11 @@ body {
 
 a,
 button,
-button:focus {
+button:focus,
+a:hover,
+a:active,
+a:visited,
+a:focus {
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
@@ -76,6 +94,8 @@ button:focus {
     border: none;
     outline: none;
     background: none;
+    border-radius: 200px;
+    text-decoration: none;
 }
 
 img,
@@ -91,6 +111,10 @@ img {
     image-rendering: -webkit-optimize-contrast;
     image-rendering: -moz-crisp-edges;
     image-rendering: crisp-edges;
+}
+
+svg {
+    width: 20px;
 }
 
 
@@ -148,11 +172,24 @@ img {
     }
 }
 
-.container {
-    max-width: 75rem;
+.ep-container {
+    max-width: 76rem;
     height: auto;
     margin: 0 auto;
     padding: 0 1.25rem;
+}
+
+.ep-tooltip {
+    position: absolute;
+    padding: 8px;
+    min-width: fit-content;
+    font-size: 0.95rem;
+    color: var(--color-ter-txt) !important;
+    border-radius: 8px 0px 8px 8px;
+    background: var(--color-popup-bg);
+    box-shadow: var(--shadow-medium);
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 
@@ -174,17 +211,19 @@ img {
 }
 
 .nav-at-header {
-    background: linear-gradient(#0000005d, #00000000);
+    background: linear-gradient(#00000025, #00000000);
     backdrop-filter: blur(0px);
     box-shadow: none;
 }
 
 .nav-at-header .nav-item-left *,
-.nav-at-header .nav-item-right * {
+.nav-at-header .nav-item-center .menu *,
+.nav-at-header .nav-item-right *,
+.nav-at-header .nav-item-right a {
     color: var(--color-white);
 }
 
-.ep-navbar .wrapper {
+.ep-navbar .ep-wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -209,15 +248,26 @@ img {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 17%;
     flex: 0 0 17%;
+    font-family: var(--font-brand);
+    font-size: 1.5rem;
+    font-weight: 800;
+    font-size: 2rem;
+    letter-spacing: 0.4px;
 }
 
 .ep-brand {
-    font-family: var(--font-brand);
-    font-size: 1.625rem;
-    font-weight: 800;
-    line-height: 1.25;
-    letter-spacing: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
     text-transform: uppercase;
+}
+
+.ep-brand img {
+    width: 28px;
+    margin-right: 8px;
 }
 
 .nav-item-center {
@@ -241,8 +291,69 @@ img {
     justify-content: flex-end;
 }
 
+.nav-item-right .toggle-account {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    font-weight: 600;
+    line-height: 1.25;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+}
+
+.nav-item-right .toggle-account .profile-menu {
+    min-width: 240px;
+    top: 2.5rem;
+    right: 12px;
+    font-weight: bold;
+    padding: 16px;
+}
+
+.nav-item-right .toggle-account .profile-menu .menu-item {
+    display: flex;
+    align-items: center;
+}
+
+.nav-item-right .toggle-account .profile-menu * {
+    color: var(--color-sec-txt);
+    cursor: pointer;
+}
+
+.nav-item-right .toggle-account .profile-menu .menu-item a img {
+    width: 48px;
+}
+
+.nav-item-right .toggle-account .profile-menu .menu-item .user-info a {
+    margin-left: 1rem;
+}
+
+.nav-item-right .toggle-account .profile-menu .menu-item .user-info a {
+    display: block;
+    margin-bottom: 6px;
+}
+
+.nav-item-right .toggle-account .profile-menu .menu-item .email {
+    font-size: 0.75rem;
+    color: var(--color-ter-txt);
+    text-decoration: underline;
+}
+
+.nav-item-right .toggle-account .profile-menu .signout-btn {
+    margin-top: 8px;
+}
+
+.nav-item-right .toggle-account .profile-menu .signout-btn svg {
+    margin-left: 8px;
+    height: 16 px;
+}
+
 .nav-item-right .menu-icon {
-    font-size: 1.35rem;
+    position: relative;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -252,17 +363,41 @@ img {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    gap: 1rem;
-    margin-left: 1rem;
-    color: var(--color-prim-txt);
+    gap: 1.5rem;
+    margin-left: 1.25rem;
+    color: var(--color-sec-txt);
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
 }
 
+.nav-item-right .toggle-account .menu-icon.profile-thumbnail {
+    width: 28px;
+    height: auto;
+    margin-top: 4px;
+    cursor: pointer;
+    display: none;
+}
+
+.nav-item-right .menu-icon .ep-tooltip {
+    top: 2rem;
+    font-size: .75rem !important;
+    right: .5rem;
+    text-align: center;
+}
+
+.nav-item-right .toggle-theme .ep-tooltip {
+    min-width: 100px;
+}
+
+.nav-item-right .toggle-account .profile-menu .menu-link:hover,
+.nav-item-right .toggle-account .profile-menu .signout-btn:hover {
+    color: var(--color-green-400);
+}
+
 .ep-navbar .menu>ul>li {
-    display: inline-block;
-    line-height: 3.125rem;
+    display: inline-flex;
     margin-left: 1.5rem;
+    margin-top: 1rem;
 }
 
 .ep-navbar .menu>ul>li.order-2 {
@@ -281,6 +416,15 @@ img {
     text-transform: capitalize;
     -webkit-transition: color 0.3s ease;
     transition: color 0.3s ease;
+}
+
+.ep-navbar .menu>ul>li.active {
+    margin-bottom: 0;
+}
+
+.ep-navbar .menu>ul>li.active a {
+    color: var(--color-green-300);
+    font-weight: 800;
 }
 
 .nav-item-right a:hover,
@@ -313,12 +457,101 @@ img {
     margin-bottom: 4%;
 }
 
+
+/* landing section */
+
 .ep-main-content #ep-landing {
     position: relative;
-    height: 100vh;
+    height: 64vh;
+    min-height: fit-content;
     width: 100vw;
     display: flex;
-    overflow-x: hidden;
+    overflow: hidden;
     /* background-color: var(--dark); */
     background-color: var(--color-green-400);
+}
+
+.ep-main-content .ep-text-content {
+    position: relative;
+    z-index: 6;
+    align-self: center;
+    height: fit-content;
+    margin-top: 2.5%;
+}
+
+#ep-landing .ep-text-content *,
+#ep-landing .ep-text-content a.ep-terms-link {
+    color: var(--color-white);
+}
+
+#ep-landing .ep-text-content .ep-reward-con {
+    width: 70%;
+}
+
+#ep-landing .ep-text-content>.ep-reward-con p:nth-child(1) {
+    font-size: 1.8vw;
+    font-weight: 700;
+    margin-bottom: .25rem;
+    opacity: .85;
+}
+
+#ep-landing .ep-reward-con .ep-reward {
+    font-size: 4.9vw !important;
+    font-weight: 900;
+    letter-spacing: 1px;
+    min-width: fit-content;
+    color: var(--color-green-300);
+}
+
+#ep-landing .ep-text-content .referrals-btn {
+    margin-top: 1rem;
+    background: transparent;
+    border: 2px solid var(--color-green-100);
+    color: var(--color-green-100);
+    font-weight: 500;
+    font-size: 1rem;
+    letter-spacing: .8px;
+    text-transform: uppercase;
+    padding: 16px;
+    width: 28%;
+}
+
+#ep-landing .ep-text-content .referrals-btn:hover {
+    background: var(--white);
+    color: var(--color-purple-300);
+    font-weight: 800;
+    width: 28.5%;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    box-shadow: var(--shadow-medium);
+}
+
+#ep-landing .ep-text-content a.ep-terms-link {
+    display: block;
+    width: fit-content;
+    text-decoration: underline;
+    font-size: 0.55rem;
+    letter-spacing: 1px;
+    color: var(--color-green-100);
+    margin-top: 2rem;
+}
+
+#ep-landing .ep-text-content .ep-terms-link:hover {
+    color: var(--color-green-200);
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+#ep-landing .ep-img-content {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+#ep-landing .ep-img-content img {
+    height: 80vh;
+}
+
+.hide {
+    display: none;
 }
