--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
     --color-navMenu-bg: #ffffff;
     --border-thin: 1px solid #e2e1e5;
     --border-extralight: 1px solid #a7a6b0;
-    --color-navbar-bg: #ffffffbb;
+    --color-navbar-bg: #ffffff80;
     --color-overlay-bg: #14132c80;
     --color-popup-bg: #ffffff;
 }
@@ -266,7 +266,7 @@ svg {
     -ms-flex-align: center;
     align-items: center;
     text-transform: uppercase;
-    color: var(--color-purple-300);
+    color: var(--color-prim-txt);
 }
 
 .ep-brand img {
@@ -426,7 +426,7 @@ svg {
     margin-bottom: 0;
 }
 
-.ep-navbar .menu>ul>li.active a {
+.ep-navbar .menu>ul>li.active>a {
     color: var(--color-green-300);
     font-weight: 800;
 }
@@ -671,13 +671,17 @@ svg {
     color: var(--color-purple-200);
 }
 
+.owl-1 .item-2 .cd-cnr-text span {
+    color: var(--color-green-200);
+}
+
 .owl-1 table thead,
 .owl-1 table thead tr {
     background-color: var(--color-prim-txt);
 }
 
 .owl-1 table thead th {
-    background-color: var(--color-sec-bg) !important;
+    background-color: var(--color-ter-bg) !important;
     color: var(--color-prim-txt);
 }
 
@@ -745,6 +749,525 @@ svg {
 .owl-1 .owl-dots .owl-dot:active,
 .owl-1 .owl-dots .owl-dot:focus {
     outline: none;
+}
+
+
+/* conditions section */
+
+.ep-main-content #ep-conditions h4 {
+    font-size: 18px;
+}
+
+.ep-main-content #ep-conditions h5 {
+    font-size: 16px;
+    /* padding-left: 1.5rem; */
+}
+
+.ep-main-content #ep-conditions p,
+.ep-main-content #ep-conditions h6 {
+    font-size: 14px;
+}
+
+.ep-main-content #ep-conditions .guide-text,
+.ep-main-content #ep-conditions h6 {
+    padding-left: 2rem;
+    line-height: 1.5rem;
+}
+
+.ep-main-content #ep-conditions h6 {
+    font-weight: 400;
+}
+
+.panel,
+.panel-body {
+    box-shadow: none;
+    padding-top: 1rem;
+}
+
+.panel-group .panel-heading {
+    padding: 0;
+}
+
+.panel-group .panel-heading a {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.5rem 0;
+    text-decoration: none;
+    position: relative;
+    border-radius: 0;
+    border-bottom: var(--border-extralight);
+    color: var(--color-prim-txt);
+    font-weight: 600;
+}
+
+.panel-group .panel-heading a:after {
+    content: "-";
+    font-size: 2rem;
+}
+
+.panel-group .panel-heading a.collapsed:after {
+    content: "+";
+}
+
+
+/* Footer */
+
+footer ul {
+    margin: 0px;
+    padding: 0px;
+}
+
+.footer-section {
+    background: #151414;
+    position: relative;
+}
+
+.footer-cta {
+    border-bottom: 1px solid #373636;
+}
+
+
+/* .single-cta svg {
+    color: #ff5e14;
+    font-size: 30px;
+    float: left;
+    margin-top: 8px;
+} */
+
+.cta-text {
+    padding-left: 15px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.cta-text h4 {
+    color: var(--color-white);
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 12px;
+}
+
+.cta-text span {
+    color: #757575;
+    font-size: 15px;
+}
+
+.footer-content {
+    position: relative;
+    z-index: 2;
+}
+
+.footer-logo {
+    margin-bottom: 8px;
+}
+
+.footer-logo a {
+    display: flex;
+    align-items: center;
+    font-family: var(--font-brand);
+    font-size: 3.2vw;
+    text-transform: uppercase;
+    color: var(--color-white);
+}
+
+.footer-logo img {
+    width: 3.2vw;
+    max-width: 200px;
+    margin-right: 8px;
+}
+
+.footer-social-icon {
+    display: flex;
+}
+
+.footer-social-icon a {
+    color: var(--color-white);
+    font-size: 16px;
+    margin-right: 15px;
+    height: 40px;
+    width: 40px;
+    line-height: 38px;
+    border-radius: 50%;
+}
+
+.footer-text p {
+    margin-bottom: 14px;
+    font-size: 14px;
+    color: #7e7e7e;
+    line-height: 28px;
+}
+
+.footer-widget-heading h3 {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 40px;
+    position: relative;
+}
+
+.footer-widget-heading h3::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -15px;
+    height: 2px;
+    width: 50px;
+    background: var(--color-orange-300);
+}
+
+.footer-widget ul li {
+    display: inline-block;
+    float: left;
+    width: 50%;
+    margin-bottom: 12px;
+}
+
+.footer-widget ul li a:hover {
+    color: var(--color-orange-300);
+}
+
+.footer-widget ul li a {
+    color: #878787;
+    text-transform: capitalize;
+}
+
+.copyright-area {
+    background: #202020;
+    padding: 25px 0;
+}
+
+.copyright-text p {
+    margin: 0;
+    font-size: 14px;
+    color: #878787;
+}
+
+.copyright-text p a {
+    color: var(--color-orange-300);
+}
+
+.footer-menu li {
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.footer-menu li:hover a,
+.footer-social-icon a:hover {
+    color: var(--color-orange-300);
+}
+
+.footer-menu li a {
+    font-size: 14px;
+    color: #878787;
+}
+
+
+/* Login style */
+
+
+/* h1 {
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+    font-weight: 700;
+} */
+
+.brand {
+    padding: 20px;
+    background: url(/assets/images/img-2.jpg);
+    background-size: cover;
+    background-position: center center;
+    color: var(--color-white);
+    min-height: 540px;
+    height: 100vh;
+    position: relative;
+    box-shadow: var(--shadow-medium);
+    transition: all 0.6s cubic-bezier(1, -0.375, 0.285, 0.995);
+    z-index: 9999;
+}
+
+.brand.active {
+    width: 100%;
+}
+
+.brand::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: var(--color-green-300);
+    opacity: .6;
+    z-index: -1;
+}
+
+.brand a.logo {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 700;
+    text-decoration: none;
+    line-height: 1em;
+    text-transform: uppercase;
+    font-family: var(--font-brand);
+}
+
+.brand a.logo img {
+    width: 1.2rem;
+    margin-right: 4px;
+}
+
+.brand a.logo span {
+    font-size: 24px;
+    color: var(--color-white);
+}
+
+.brand .heading {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    transition: all 0.6s;
+}
+
+.brand .heading.active {
+    top: 100px;
+    left: 100px;
+    transform: translate(0);
+}
+
+.brand .heading h2 {
+    font-family: var(--font-brand);
+    font-size: 7vw;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 0;
+}
+
+.brand .heading p {
+    font-size: 15px;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    white-space: 4px;
+}
+
+.brand .success-msg {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 60px;
+}
+
+.brand .success-msg p {
+    font-size: 25px;
+    font-weight: 400;
+}
+
+.brand .success-msg p.active {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.form {
+    position: relative;
+}
+
+.form .form-peice {
+    min-height: 480px;
+    height: 100vh;
+    color: #bbbbbb;
+    padding: 30px 0 60px;
+    transition: all 0.9s cubic-bezier(1, -0.375, 0.285, 0.995);
+    position: absolute;
+    top: 0;
+    left: -30%;
+    width: 130%;
+    overflow: hidden;
+}
+
+.form .form-peice.switched {
+    transform: translateX(-100%);
+    width: 100%;
+    left: 0;
+}
+
+.form form {
+    padding: 0 40px;
+    margin: 0;
+    width: 70%;
+    position: absolute;
+    top: 50%;
+    left: 60%;
+    transform: translate(-50%, -50%);
+}
+
+.form form .form-group {
+    margin-bottom: 5px;
+    position: relative;
+}
+
+.form form .form-group.hasError input {
+    border-color: #f95959 !important;
+}
+
+.form form .form-group.hasError label {
+    color: #f95959 !important;
+}
+
+.form form label {
+    font-size: 12px;
+    font-weight: 400;
+    text-transform: uppercase;
+    transform: translateY(40px);
+    transition: all 0.4s;
+    cursor: text;
+    z-index: -1;
+}
+
+.form form label.active {
+    transform: translateY(10px);
+    font-size: 10px;
+}
+
+.form form label.fontSwitch {
+    font-weight: 600;
+}
+
+.form form input:not([type=submit]) {
+    background: none;
+    outline: none;
+    border: none;
+    display: block;
+    padding: 10px 0;
+    width: 100%;
+    border-bottom: var(--border-extralight);
+    color: var(--color-sec-txt);
+    font-size: 15px;
+    z-index: 1;
+}
+
+.form form input:not([type=submit]).hasError {
+    border-color: #f95959;
+}
+
+.form form span.error {
+    color: #f95959;
+    font-family: "Montserrat", sans-serif;
+    font-size: 12px;
+    position: absolute;
+    bottom: -20px;
+    right: 0;
+    display: none;
+}
+
+.form form input[type=password] {
+    color: #f95959;
+}
+
+.form form .CTA {
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.form form .check-group {
+    width: 60%;
+    display: flex;
+    background-color: var(--color-purple-100);
+}
+
+.form form .CTA input {
+    font-size: 1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 1rem 4rem;
+    background: var(--color-green-300);
+    color: var(--color-white);
+    border-radius: 30px;
+    border: none;
+    font-family: "Montserrat", sans-serif;
+}
+
+.form form .check-group input {
+    padding: 0;
+    width: 10%;
+    display: inline-flex;
+    margin: 0;
+}
+
+.form form .check-group label {
+    position: relative;
+    padding: 0;
+    display: inline-flex;
+    margin: 0;
+}
+
+@media (max-width: 768px) {
+    .container {
+        overflow: hidden;
+    }
+    section#formHolder {
+        padding: 0;
+    }
+    section#formHolder div.brand {
+        min-height: 200px !important;
+    }
+    section#formHolder div.brand.active {
+        min-height: 100vh !important;
+    }
+    section#formHolder div.brand .heading.active {
+        top: 200px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    section#formHolder div.brand .success-msg p {
+        font-size: 16px;
+    }
+    section#formHolder div.brand .success-msg a {
+        padding: 5px 30px;
+        font-size: 10px;
+    }
+    section#formHolder .form {
+        width: 80vw;
+        min-height: 500px;
+        margin-left: 10vw;
+    }
+    section#formHolder .form .form-peice {
+        margin: 0;
+        top: 0;
+        left: 0;
+        width: 100% !important;
+        transition: all 0.5s ease-in-out;
+    }
+    section#formHolder .form .form-peice.switched {
+        transform: translateY(-100%);
+        width: 100%;
+        left: 0;
+    }
+    section#formHolder .form .form-peice>form {
+        width: 100% !important;
+        padding: 60px;
+        left: 50%;
+    }
+}
+
+@media (max-width: 480px) {
+    section#formHolder .form {
+        width: 100vw;
+        margin-left: 0;
+    }
+    h2 {
+        font-size: 50px !important;
+    }
 }
 
 .hide {
