--- a/templates/login-2.html
+++ b/templates/login-2.html
@@ -340,7 +340,7 @@
                 </label>
                 <button class="btn btn-login">Login</button>
             </form>
-            <p class="text-mute">Not a member? <a href="signup.html">Sign up</a></p>
+            <p class="text-mute">Not a member? <a href="{% url 'signup' %}">Sign up</a></p>
         </main>
         <div class="welcome-container pink-gradient">
             <h1 class="heading-secondary">Welcome to <span class="lg">ECOH Platform!</span></h1>
