--- a/static/css/style.css
+++ b/static/css/style.css
@@ -380,7 +380,7 @@
         border-color: transparent;
     }
     
-    .nav-link {
+    #navbarSupportedContent .nav-link {
         position: relative;
         padding: 4px 0 !important;
         display: inline-block;
